2001-03-21  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* w3m.el (w3m-arrived-shutdown): Check sites which are arrived on
	the other emacs process.

2001-03-21  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-input-url): 'nil' don't add candidates.

2001-03-21  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* w3m-antenna.el (w3m-antenna-make-summary-function): Default
	value is changed.
	(w3m-antenna-make-summary-like-natsumikan): New function.

	* w3m.el (w3m-about-db-history-sort-time): Removed.
	(w3m-about-db-history): Use `w3m-time-newer-p' instead of
	`w3m-about-db-history-sort-time'.

2001-03-20  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-about-history-except-regex): New constant.
	(w3m-about-db-history): New function.
	(w3m-about-db-history-sort-time): Ditto.
	(w3m-about-history): If 'titile' is '<no-title>', show 'URL' instead
	of 'title'. Use w3m-about-history-except-regex.
	(w3m-history): If exec with 'C-u', goto 'about://db-history/'.
	(w3m-w3m-attributes): Adhoc implementation when server return
	'HTTP/1.x 500x'.

2001-03-19  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* w3m.el: Format of arrived URL database is changed in order to
	store page's title.
	(w3m-arrived-title, w3m-arrived-put-title): New function.
	(w3m-arrived-setup, w3m-arrived-shutdown): Follow format change.
	(w3m-about-history): Use page's title to make history contents.

2001-03-19  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-url-to-file-name): Fix 'file:///c/xxxx' format in
	Windows.
	(w3m-expand-file-name-as-url): Use 'file:///c|/xxxx' format if
	non-cygwin Windows.
	(w3m-about-history): Uniq history. Insert exposition of html.

2001-03-19  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* w3m.el (w3m-url-to-file-name): Fix (Cf. RFC-1808).
	(w3m-expand-file-name-as-url): Ditto.
	(w3m-url-local-p): New function.
	(w3m-goto-url): Set `default-directory' when URL points a local
	file.