@@ -1,3 +1,12 @@
+2001-03-21  Hideyuki SHIRAI  <shirai@meadowy.org>
+
+	* w3m.el (w3m-about-db-history): Use w3m-arrived-arrived-time().
+	(w3m-goto-url): Put arrived time to w3m-arrived-db.
+	(w3m-arrived-shutdown): Handling 'arrived-time in w3m-arrived-db.
+	(w3m-arrived-setup): Ditto.
+	(w3m-arrived-put-title): New function.
+	(w3m-arrived-arrived-time): Ditto.
+
 2001-03-21  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>
 
 	* w3m.el (w3m-arrived-shutdown): Check sites which are arrived on
